fix card overlap problem

--- a/src/components/atoms/Card/Card.module.css
+++ b/src/components/atoms/Card/Card.module.css
@@ -1,7 +1,8 @@
 .cardContainer {
     background-color: white;
     width: 268px;
-    min-height: 141px;
+    height: 141px;
+    max-width: 80vw;
     /* height: 141px; * might be worth to take this out and add padding for dynamic length card * */
     border-radius: 22px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
